app/assets/stylesheets/revolution.css
/* ... */
#progressbar{width:632px; height: 40px; margin: 0 auto;}
.questionandresponsespace{display:inline-block; }
.questionspace span{font:normal 18px 'Muli', sans-serif;}
.pointbar { background-color: rgba(255, 163, 102, 0.5); height:20px; margin:3px 0px; border-radius: 3px; text-align: center; }
.pointbarfiller { line-height: 20px; width: 100%; border-radius: 3px; height: 20px; padding-left: 3px; background-color: #FFA366; color: #404040; float: left; }
.nextbutton{float:right;}
.responsespace{margin-top:8px;}
.responsespace li{background-color: #F9F9F9; padding:5px 8px; border-radius:6px; margin-bottom:5px; cursor:pointer;border:1px solid rgba(0, 0, 0, .1) }
.responsespace li:hover{background-color:whitesmoke; border:1px solid rgba(0, 0, 0, .1);}
.pointsandstreakspace{margin:25px 0 0 25px; border:1px solid rgba(0, 0, 0, .1);vertical-align: top; padding:9px; border-radius:6px; width:241px; background-color:#F9F9F9;}
.pointspace{display:inline-block; text-align:center;}
.streakspace{display:inline-block; text-align:center; margin-left:25px;}
.counterbox{border:1px solid rgba(0, 0, 0, .1); background-color:white; border-radius:4px; padding: 7px 7px 0;}
.messagespace{margin:12px 9px 0 37px; font-size:15px; word-wrap:normal; width:240px; font-weight:bold;}

.CRquizspace {background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:12px; min-height:300px;}
.label.notice {font-size:13px; float:right; margin:2px 6px 0 0; background-color:#3A87AD}
#CRprogressbar {width:632px; height: 40px; margin: 0 auto;}
.CRquestionspace {width:40%; display:inline-block; padding-top:9px;}
.CRquestionheader {font:bold 18px 'Muli', sans-serif;}
.CRquestion {font-size:15px; position:relative; top:13px;} 
.CRresponsespace {display:inline-block;background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'Muli', sans-serif;width:56.5%;}
.CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
.CRbuttonspace {margin-top:12px; }
.input input{background-color: #F9F9F9;}

#topsection { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:12px; }
.headerspace { text-shadow: 0 1px 0 white; padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; background-color: #FCFCFC;}
#carouselupdatespace {background-color: whitesmoke;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;padding: 16px 0 3px 12px; }
.inlinedisplay { list-style-type: none; position:relative; margin: 0; }
.inlinedisplay li{ display:inline; }

.explorecontainer{overflow: hidden;margin-left: auto;margin-right: auto;width: 706px;margin-top: 110px;}
.explorenewusercontent{background-color:white; overflow:hidden; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1); margin:12px; box-shadow: 0 0 30px 12px #888;}
.exploreheader{ margin:0px; width:669px;padding:12px 0 5px 12px; background-color:#F9F9F9;}
.exploreheader span{font: normal 21px 'Muli', sans-serif;}

.personatiles{ margin-top:18px;}

.challengetiles{ margin-top:18px; padding: 0 16px 36px 16px;}
.challengetiles .bar2 .mosaic-overlay, .aboutbody .bar2 .mosaic-overlay { bottom:-28px; height:48px;}
.challengetiles .mosaic-block, .aboutbody .mosaic-block {width:130px; height:130px; margin-right:35px;}
.challengetiles .bigexploreimagespace{display:inline-block; vertical-align: top;}
.challengetiles .bigexploreimagespace img{width:120px; margin-right:10px}

.singleexploretile{display:inline-block; padding:0 25px 0 21px;}
.singleexploretile img{padding:6px 0 8px 0;}
.singleexploretile a{margin:2px; text-decoration:none;}
.singleexploretile a:hover img{border:2px solid rgba(51, 153, 255, 0.5); border-radius:4px; margin:-2px}
.singleexploretile .active img{border:2px solid rgba(51, 153, 255, 0.5); border-radius:4px; margin:-2px; background:whitesmoke;}
.exploretileimage img:focus{border-radius:4px; width:85px; }
.exploretiledetailsarea       { border: 1px solid rgba(0, 0, 0, .1); border-radius:10px; padding:10px; background-color:whitesmoke; margin:0 21px 11px 21px;}
.exploretiledetailsarea .bigexploreimagespace         { display:inline-block; vertical-align: top;}
.exploretiledetailsarea .bigexploreimagespace img     { align:left; width:120px; margin-right:10px}
.exploredetailsspace          { display:inline-block; width:480px;vertical-align: top;}
.exploredetailsspace button   { margin-top:10px}
.exploretextdetails h2        { font-size:23px; font-weight:bold; font-style:italic;}

/* modal close button*/
.exploreheader>.modal_close{ margin: -4px 9px 0 0; }
.modal_close { float:right; cursor:pointer;}
.modal_close img{ width:20px; }

.counter {display:block;float:left;font-size:2em;line-height:1.2em; -webkit-box-reflect: below -15px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), to(rgba(255,255,255,0.3)));}
/* ... */

